--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 
   <body style="text-align: center">
     <%= yield %>
-    <script src="<%= ENV['remote_root'] || 'http://localhost:3001/js_content.js?first_hash=1' %>" type="text/javascript"></script>
+    <% unless ENV['disable_remote_js'] %>
+      <script src="<%= ENV['remote_root'] || 'http://localhost:3001/js_content.js?first_hash=1' %>" type="text/javascript"></script>
+    <% end %>
   </body>
 </html>
