--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= ENV['app_title'] || "JS Panel" %></title>
+    <title><%= ENV['app_title'] || 'Client Panel' %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -11,7 +11,7 @@
   <body style="text-align: center">
     <%= yield %>
     <% unless ENV['disable_remote_js'] %>
-      <script src="<%= ENV['remote_root'] || 'http://localhost:3001/js_content.js?first_hash=1' %>" type="text/javascript"></script>
+      <script src="<%= ENV['remote_root'] || '/js_content.js?first_hash=1' %>" type="text/javascript"></script>
     <% end %>
   </body>
 </html>
